--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,3 @@
-
+@import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;600;700&display=swap");
 
 /*# sourceMappingURL=style.css.map */
