Another comit for the project !!!

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,123 @@
-@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;600;700&display=swap");
+
+$font-family: "Libre Franklin", sans-serif;
+$Blue: hsl(223, 87%, 63%);
+$Pale_Blue: hsl(223, 100%, 88%);
+$Light_Red: hsl(354, 100%, 66%);
+$Gray: hsl(0, 0%, 59%);
+$Very_Dark_Blue: hsl(209, 33%, 12%);
+$width: 100%;
+
+@mixin align_flex_center($alignement, $center: center) {
+    display: flex;
+    align-items: $center;
+    justify-content: $center;
+    flex-direction: $alignement;
+}
+
+@mixin text-center {
+    text-align: center;
+}
+
+body {
+    @include align_flex_center(column);
+    font-family: $font-family;
+    font-size: 20px;
+    height: 100vh;
+    margin: 0 auto;
+    max-width: 1440px;
+    box-sizing: border-box;
+
+    header {
+        @include text-center;
+
+        img {
+            width: 100%;
+            margin: 0 0 0 0;
+        }
+    }
+
+    main {
+        @include align_flex_center(column);
+        padding: 0 20px;
+
+        h1 {
+            font-size: 2.2rem;
+            font-weight: 300;
+            padding: 0;
+            margin: 0;
+            color: $Gray;
+
+            span {
+                color: #000;
+                font-weight: 700;
+            }
+        }
+
+        h2 {
+            font-size: 1.1rem;
+            padding: 0;
+            margin: 10px 0 25px 0;
+            font-weight: 300;
+        }
+
+        form {
+            @include align_flex_center(row);
+            width: $width;
+            margin: 0 0 50px 0;
+
+            div>button {
+                margin-left: 15px;
+            }
+        }
+
+        div {
+            @include text-center;
+
+            i {
+                font-size: 1.5rem;
+                margin: 0 0 10px 0;
+            }
+
+            img {
+                width: $width/2;
+            }
+        }
+
+    }
+
+    footer {
+        @include align_flex_center(column);
+
+        div {
+            @include text-center;
+
+            .fa-brands {
+                font-size: 1.1rem;
+                border: 1px solid $Pale_Blue;
+                border-radius: 50%;
+                padding: 10px;
+                width: 17px;
+                height: 17px;
+                color: $Blue;
+
+                &:hover {
+                    background-color: $Blue;
+                    color: #fff;
+                }
+
+                &:not(:last-child) {
+                    margin: 75px 15px 10px 0;
+                }
+            }
+
+
+            p {
+                font-size: 0.9rem;
+                font-weight: 300;
+                margin: 0 0 25px 0;
+                color: $Gray;
+            }
+        }
+    }
+}
