--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,98 @@
 @import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;600;700&display=swap");
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-family: "Libre Franklin", sans-serif;
+  font-size: 20px;
+  height: 100vh;
+  margin: 0 auto;
+  max-width: 1440px;
+  box-sizing: border-box;
+}
+body header {
+  text-align: center;
+}
+body header img {
+  width: 100%;
+  margin: 0 0 0 0;
+}
+body main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 20px;
+}
+body main h1 {
+  font-size: 2.2rem;
+  font-weight: 300;
+  padding: 0;
+  margin: 0;
+  color: hsl(0deg, 0%, 59%);
+}
+body main h1 span {
+  color: #000;
+  font-weight: 700;
+}
+body main h2 {
+  font-size: 1.1rem;
+  padding: 0;
+  margin: 10px 0 25px 0;
+  font-weight: 300;
+}
+body main form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  width: 100%;
+  margin: 0 0 50px 0;
+}
+body main form div > button {
+  margin-left: 15px;
+}
+body main div {
+  text-align: center;
+}
+body main div i {
+  font-size: 1.5rem;
+  margin: 0 0 10px 0;
+}
+body main div img {
+  width: 50%;
+}
+body footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+body footer div {
+  text-align: center;
+}
+body footer div .fa-brands {
+  font-size: 1.1rem;
+  border: 1px solid hsl(223deg, 100%, 88%);
+  border-radius: 50%;
+  padding: 10px;
+  width: 17px;
+  height: 17px;
+  color: hsl(223deg, 87%, 63%);
+}
+body footer div .fa-brands:hover {
+  background-color: hsl(223deg, 87%, 63%);
+  color: #fff;
+}
+body footer div .fa-brands:not(:last-child) {
+  margin: 75px 15px 10px 0;
+}
+body footer div p {
+  font-size: 0.9rem;
+  font-weight: 300;
+  margin: 0 0 25px 0;
+  color: hsl(0deg, 0%, 59%);
+}
 
 /*# sourceMappingURL=style.css.map */
