--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,8 +23,7 @@ body {
     @include align_flex_center(column);
     font-family: $font-family;
     font-size: 20px;
-    height: 100vh;
-    margin: 0 auto;
+    margin: 50px auto;
     max-width: 1440px;
     box-sizing: border-box;
 
@@ -63,12 +62,55 @@ body {
 
         form {
             @include align_flex_center(row);
+            flex-wrap: wrap;
             width: $width;
             margin: 0 0 50px 0;
 
-            div>button {
-                margin-left: 15px;
+            div {
+                height: 50px;
+
+                button {
+                    width: 150px;
+                    margin-left: 15px;
+                    color: #fff;
+                    background-color: $Blue;
+                    border: 1px solid $Blue;
+                    border-radius: 150px;
+                    height: 50px;
+                    padding: 0 25px;
+
+                    &:hover {
+                        box-shadow: 1px 1px 15px 0px $Blue;
+                        cursor: pointer;
+                    }
+                }
+
+                input {
+                    width: 400px;
+                    border: 1px solid $Pale_Blue;
+                    border-radius: 150px;
+                    height: 50px;
+                    padding: 0 25px;
+
+                    &:focus {
+                        outline: none;
+                    }
+
+                    &::placeholder {
+                        color: $Pale_Blue;
+                    }
+                }
+
+                #ErrorMsg {
+                    text-align: left;
+                    color: $Light_Red;
+                    font-size: 1rem;
+                    margin: 5px 0 0 25px;
+                    font-style: italic
+                }
             }
+
+
         }
 
         div {
@@ -120,4 +162,40 @@ body {
             }
         }
     }
+}
+
+@media all and (max-width: 375px) {
+    body {
+        main {
+            h1 {
+                font-size: 2rem;
+                text-align: center;
+                margin: 25px 0 35px 0;
+            }
+
+            h2 {
+                font-size: 0.8rem;
+            }
+
+            form {
+                div {
+                    height: unset;
+                    input {
+                        width: 300px;
+                    }
+
+                    #ErrorMsg {
+                        text-align: center;
+                        font-size: 0.7rem;
+                    }
+
+                    button {
+                        width: 350px;
+                        margin: 25px 0 50px 0;
+                    }
+                }
+            }
+        }
+    }
+
 }
